# gerber-parser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  gerber_doc.rs  gerber_document.rs  gerber_parser.rs  lib.rs  parser.rs
tests/: component_tests.rs  full_file_tests.rs  reference_file_tests.rs
tests/utils/: mod.rs
