[package]
name = "gerber_parser"
version = "0.1.1"
edition = "2018"
authors = ["Nemo nemoandrea@outlook.com"]
description = "A simple gerber parser for the gerber-types crate"
repository = "https://github.com/NemoAndrea/gerber-parser" 

[dependencies]
regex = "1"
gerber-types = "0.2.0"
stringreader = "0.1.1"

[dev-dependencies]
stringreader = "0.1.1"