[package]
name = "gerber_parser"
version = "0.1.2"
edition = "2018"
authors = ["Nemo nemoandrea@outlook.com"]
description = "A simple gerber parser for the gerber-types crate"
readme = "README.md" 
documentation = "https://docs.rs/gerber_parser"
license = "AGPL-3.0"
homepage = "https://github.com/NemoAndrea/gerber-parser"
repository = "https://github.com/NemoAndrea/gerber-parser" 


[dependencies]
regex = "1"
gerber-types = "0.3.0"
stringreader = "0.1.1"
thiserror = "1.0.64"
lazy-regex = "3.3.0"
log = "0.4.22"

[dev-dependencies]
stringreader = "0.1.1"
